[gd_scene load_steps=11 format=3 uid="uid://ddbh5oc61wqd0"]

[ext_resource type="Texture2D" uid="uid://bc6t77u8172lf" path="res://assets/game/objects/ground_objects/Crystal.png" id="1_dgn4m"]
[ext_resource type="Script" uid="uid://c6t1e06xgslns" path="res://scenes/objects/healing_crystal/healing_crystal_area.gd" id="2_irbk2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cvtmi"]
atlas = ExtResource("1_dgn4m")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bayxb"]
atlas = ExtResource("1_dgn4m")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_joumg"]
atlas = ExtResource("1_dgn4m")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgxmt"]
atlas = ExtResource("1_dgn4m")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yd7f7"]
atlas = ExtResource("1_dgn4m")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_svpa7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvtmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bayxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joumg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgxmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yd7f7")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_hiwdo"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kgaln"]
size = Vector2(47, 47)

[node name="HealingCrystal" type="AnimatedSprite2D"]
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_svpa7")
autoplay = "default"

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_hiwdo")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("2_irbk2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_kgaln")

[node name="HealTimer" type="Timer" parent="Area2D"]

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
